<?xml version="1.0"?>
<package format="2">
  <name>abb_irb4600_robot</name>
  <version>0.0.1</version>
  <description>Launch files for interacting with the ABB IRB 4600</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>

